# cooking-wizard

./: .gitignore  README.md  azure.yaml  hello.py  pyproject.toml
infra/: main.bicep  main.bicepparam
infra/modules/: aiServices.bicep  applicationInsights.bicep  containerRegistry.bicep  hub.bicep  keyVault.bicep  project.bicep  storageAccount.bicep
scripts/: postprovision.sh  preprovision.sh
src/: test.http  utils.py
src/backend/: app.py  utils.py
src/frontend/: app.py  app_refactored.py
src/meal-plans/: meal-planner_2024-12-30_17-13-15.md  meal-planner_2024-12-30_17-24-03.md  meal-planner_2024-12-30_17-32-15.md
src/notebooks/: azure-ai-search.ipynb  basic-agent.ipynb  main.ipynb  use-azure-sdk.ipynb  use-openai-sdk.ipynb
src/scripts/: sample_agents_basics.py  sample_agents_basics_with_azure_monitor_tracing.py  sample_agents_bing_grounding.py  sample_agents_code_interpreter.py  sample_agents_file_search.py  sample_agents_functions.py  sample_agents_json_schema.py  sample_agents_run_with_toolset.py  sample_agents_stream_eventhandler.py
