[project]
name = "cooking-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-projects>=1.0.0b4",
    "azure-identity>=1.19.0",
    "fastapi>=0.115.6",
    "ipykernel>=6.29.5",
    "openai>=1.58.1",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
