[project]
name = "cooking-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-ml>=1.23.0",
    "azure-ai-projects>=1.0.0b4",
    "azure-identity>=1.19.0",
    "azure-monitor-opentelemetry>=1.6.4",
    "fastapi>=0.115.6",
    "ipykernel>=6.29.5",
    "openai>=1.58.1",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
